doc: Add doc to users routes
