# carrelage/api/user/controller.go
@@ -12,12 +12,25 @@ type Controller struct {
 	usersService *services.UsersService
 }
 
+// @Summary  Find a User for a given ID
+// @Tags     users
+// @Success  200     {object}  models.User
+// @Failure  404     {object}  api.JSONError
+// @Failure  500     {object}  api.JSONError
+// @Param    userID  path      string  true  "User ID"
+// @Router   /users/{userID} [get]
 func (c *Controller) Get(ctx *fiber.Ctx) error {
 	user := c.getUser(ctx)
 
 	return ctx.Status(fiber.StatusOK).JSON(user)
 }
 
+// @Summary  Get the user of the connected one
+// @Tags     users
+// @Success  200  {object}  models.User
+// @Failure  404  {object}  api.JSONError
+// @Failure  500  {object}  api.JSONError
+// @Router   /users/me [get]
 func (c *Controller) GetMe(ctx *fiber.Ctx) error {
 	sessionContainer := session.GetSessionFromRequestContext(ctx.UserContext())
 	userID := sessionContainer.GetUserID()
@@ -32,6 +45,14 @@ func (c *Controller) GetMe(ctx *fiber.Ctx) error {
 	return ctx.Status(fiber.StatusOK).JSON(user)
 }
 
+// @Summary  Update the user
+// @Tags     users
+// @Success  200     {object}  api.JSONMessage
+// @Failure  404     {object}  api.JSONError
+// @Failure  500     {object}  api.JSONError
+// @Param    userID  path      string               true  "User ID"
+// @Param    body    body      user.UpdateUserBody  true  "Update body"
+// @Router   /users/{userID} [patch]
 func (c *Controller) UpdateUser(ctx *fiber.Ctx) error {
 	user := c.getUser(ctx)
 	body := ctx.Locals(middlewares.BODY).(UpdateUserBody)
